fix grammer typos in slides

--- a/Ruhan_presentation/index.html
+++ b/Ruhan_presentation/index.html
@@ -75,7 +75,7 @@
 <li>Fork a remote repository (this is on server side)</li>
 <li>Clone remote repo into your local<br></li>
 <li>Make the changes in your local and remote repo </li>
-<li>Sycncing a fork</li>
+<li>Syncing a fork</li>
 <li>Get the changes from remote repo Fetch vs. Pull</li>
 <li>Git fetch upstream </li>
 <li>Submit pull request to project owner </li>
@@ -226,7 +226,7 @@
 <ul>
 <li><a href="https://github.com/CenterForAssessment/NCME_Training_Session_2015/">NCME 2015 training website</a></li>
 <li>In the top-right corner of the page, click Fork.</li>
-<li>Chek your own github repo</li>
+<li>Check your own github repo</li>
 </ul></li>
 <li>Clone your fork of repository 
 
