Updating presentation session 1

--- a/Damian_Presentation_1/index.html
+++ b/Damian_Presentation_1/index.html
@@ -189,6 +189,7 @@
 			<ul>
 				<li class="next">Fundamentally alters the way in which people communicate and collaborate.</li>
 				<li class="next">Research papers become research websites.</li>
+				<li class="next">Research becomes more reproducibile and open.</li>
 				<li class="next">Now possible to rapidly co-develop software and share data (even confidential data) used for data analysis.</li>
 				<li class="next">A very small team can now do what previously took an army of researchers.</li>
 			</ul>
@@ -211,11 +212,10 @@
 		<h2>Goals for Today</h2>
 
 		<ul>
-			<li class="next">Create a GitHub account, clone a repository.</li>
-			<li class="next">Install R and Rtools (Windows) on your computer.</li>
-			<li class="next">Write a simple R package and commit to GitHub.</li>
-			<li class="next">Install package from GitHub both locally and in the cloud/AWS.</li>
-			<li class="next">Create GitHub page for project.</li> 
+			<li class="next">Create a GitHub account, install GitHub client, and learn about version control.</li>
+			<li class="next">Investigate "write once, publish everywhere" using GitHub.</li>
+			<li class="next">Examine GitHub repository Wiki and its static HTML pages.</li>
+			<li class="next">Install RStudio and Rtools (Windows) on your computer and learn about R and its package management system.</li>
 		</ul>
 	</div></section>
 
@@ -261,7 +261,7 @@
 		<h2>GitHub</h2>
 
 		<ul>
-			<li class="next">Besides version control, GitHub provides versioning statistics as well as FREE static website hosting for each project.</li>
+			<li class="next">Besides version control, GitHub provides versioning statistics as well as FREE static website hosting for each project and a project Wiki.</li>
 			<li class="next">Version control and project hosting all in one!</li> 
 			<li class="next"><a href="http://netflix.github.io/#repo">Netflix develops and showcases it tools on GitHub.</a></li> 
 			<li class="next"><a href="http://sgp.io">Can also forward to alternate domain names.</a></li> 
@@ -330,7 +330,7 @@
 
 		<ul>
 			<li class="next">The Internet (Yeah right, where does one start?)</li>
-			<li class="next">Seriously, code examples are everywhere on the internet.</li>
+			<li class="next">Seriously, code examples are everywhere on the internet. Just Google it.</li>
 			<li class="next"><a href="http://www.stackoverflow.com">Stackoverflow: Often referenced with Google searches.</a></li> 
 			<li class="next"><a href="http://www.twitter.com">Twitter: Start following interesting people.</a></li> 
 			<li class="next"><a href="http://www.getprismatic.com">Prismatic: News/Information collation.</a></li> 
