--- a/Ruhan_presentation/index.html
+++ b/Ruhan_presentation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Use of Github for Shared LateX documents</title>
+  <title>Use of Github for Shared LaTeX documents</title>
   <meta charset="utf-8">
   <meta name="description" content="Use of Github for Shared LateX documents">
   <meta name="author" content="Ruhan Circi">
@@ -32,8 +32,8 @@
     <!-- LOGO SLIDE -->
         <slide class="title-slide segue nobackground">
   <hgroup class="auto-fadein">
-    <h1>Use of Github for Shared LateX documents</h1>
-    <h2>Version Control and Collaboration</h2>
+    <h1>Use of GitHub for Shared LateX documents</h1>
+    <h2>An introduction to Version Control & Collaboration</h2>
     <p>Ruhan Circi<br/>April 15th 2015</p>
   </hgroup>
   <article></article>  
@@ -43,7 +43,7 @@
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
   <hgroup>
-    <h2>My inspration to use Github is Picasso</h2>
+    <h2>My inspration & GitHub & Picasso</h2>
   </hgroup>
   <article data-timings="">
     <h3>Do you recognize this famous painting?</h3>
@@ -63,22 +63,22 @@
   <article data-timings="">
     <ol class = "build incremental">
 <li>What is LaTeX?</li>
-<li>Github Example<br>
+<li>GitHub Example<br>
 
 <ul>
-<li>Put your LaTeX document into your Github repository </li>
-<li>Branching,merging and dealing with conflicts </li>
+<li>Put your LaTeX document into your GitHub repository </li>
+<li>Branching, merging and dealing with conflicts </li>
 </ul></li>
-<li>Git to collaborate with others 
+<li>GitHub to collaborate with others 
 
 <ul>
 <li>Fork a remote repository (this is on server side)</li>
-<li>Clone remote repo into your local<br></li>
-<li>Make the changes in your local and remote repo </li>
-<li>Syncing a fork</li>
-<li>Get the changes from remote repo Fetch vs. Pull</li>
-<li>Git fetch upstream </li>
-<li>Submit pull request to project owner </li>
+<li>Clone remote repo into your local repository<br></li>
+<li>Make the changes in your local workstation and remote repository </li>
+<li>Sycncing a fork repository</li>
+<li>Get the changes from remote repository -- Fetch vs. Pull</li>
+<li>Get the updates from original repository (upstream) </li>
+<li>Submit pull request to original project owner </li>
 </ul></li>
 </ol>
 
@@ -105,11 +105,11 @@
   </hgroup>
   <article data-timings="">
     <ol class = "build incremental">
-<li>What is LateX? </li>
+<li>What is LaTeX? </li>
 <li>Steps to create a simple document:
 
 <ul>
-<li>Open the text editor</li>
+<li>Open your text editor</li>
 <li>Save a blank file (name it as &quot;latex_(your_initials)_trial.tex&quot;)</li>
 </ul></li>
 </ol>
@@ -130,13 +130,13 @@
 <li>\documentclass[11pt]{article}</li>
 <li>\begin {document}</li>
 <li>\section {Welcome}</li>
-<li>\textit(Hello) \underline{from} \textbf{NCME}</li>
-<li>Happy to see you all. Let&#39;s start with some math.  Given that \((z+1)\) and \((z+4)\),<br></li>
+<li>\textit(This) \underline{is} \textbf{an introduction.}</li>
+<li> Let&#39;s start with some math.  Given that \((z+1)\) and \((z+4)\),<br></li>
 <li>The area is presented by \(Area=z^2+5z+4\) </li>
 <li>\subsection[10]{context} We will cover good things!!!</li>
 <li>\end{document}</li>
 </ul></li>
-<li><p>Create another LateX document</p></li>
+<li><p>Create another LaTeX document</p></li>
 </ol>
 
   </article>
@@ -145,7 +145,7 @@
 
 <slide class="" id="slide-6" style="background:;">
   <hgroup>
-    <h2>Github: Put your document into your repository</h2>
+    <h2>Local Repo: Put your document into your repository</h2>
   </hgroup>
   <article data-timings="">
     <ol class = "build incremental">
@@ -170,7 +170,7 @@
 
 <slide class="" id="slide-7" style="background:;">
   <hgroup>
-    <h2>Github: Make and track edits</h2>
+    <h2>From Local Repo to GitHub</h2>
   </hgroup>
   <article data-timings="">
     <ol class = "build incremental">
@@ -180,7 +180,7 @@
 <li>Check your git status</li>
 <li>Check the differences </li>
 <li>Commit your changes </li>
-<li>Push into your repository </li>
+<li>Push into your GitHub repository </li>
 </ul></li>
 </ol>
 
@@ -190,7 +190,7 @@
 
 <slide class="" id="slide-8" style="background:;">
   <hgroup>
-    <h2>Maintaining Multiple branches for a project</h2>
+    <h2>Maintaining multiple branches for a project</h2>
   </hgroup>
   <article data-timings="">
     <div style='text-align: center;'>
@@ -221,19 +221,19 @@
     <h3>Let&#39;s help me to finish my dissertation :)</h3>
 
 <ol class = "build incremental">
-<li>Fork the repo (need to do this online)
+<li>Fork a GitHub repository (need to do this online)
 
 <ul>
 <li><a href="https://github.com/CenterForAssessment/NCME_Training_Session_2015/">NCME 2015 training website</a></li>
 <li>In the top-right corner of the page, click Fork.</li>
-<li>Check your own github repo</li>
+<li>Chek your own github repo</li>
 </ul></li>
-<li>Clone your fork of repository 
+<li>Clone your fork repository into your local 
 
 <ul>
 <li><a href="mailto:git@github.com">git@github.com</a>:ruhancirci/NCME_Training_Session_2015.git<br>
 (add &quot;<space> NCME2015_workshop&quot; if you want to extract into a specific folder)</li>
-<li>Simple forking structure <div style='text-align: center;'>
+<li>Simple fork structure <div style='text-align: center;'>
 <img height='190' width='450'src='pictures/forking.jpg' />
 </div></li>
 </ul></li>
@@ -254,7 +254,7 @@
 <li>Check git status in your local repo</li>
 <li>Make edits into a file and save</li>
 <li>Commit your edits </li>
-<li>Push your edits into your remote repo</li>
+<li>Push your edits into your remote repository</li>
 </ol>
 
   </article>
@@ -269,7 +269,7 @@
     <h3>Syncing a fork (via git fetch)</h3>
 
 <ol class = "build incremental">
-<li>Go to your remote fork repository and make some in a file</li>
+<li>Go to your remote fork repository and make some edits in a file</li>
 <li>Check your git status</li>
 <li>Run the command git fetch</li>
 <li>Check the difference between remote and local master </li>
